# camino_tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml
app/: __init__.py  main.py
app/static/: index.html
src/app/: main.py  route_utils.py
src/app/static/: config.html  index.html  login.html  script.js
