[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "camino-tracker"
version = "0.1.0"
description = "Web app to visualize the Camino de Santiago route"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "geopy",
]
