[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "camino-tracker"
version = "0.1.0"
description = "Web app to visualize the Camino de Santiago route"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "geopy",
]

[tool.setuptools]
# Use the ``src`` directory for the project packages so that installation via
# uv/setuptools picks up the application package correctly.
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
